# lcaf-skeleton-python-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-container-for-branch.yaml  cleanup-container-for-branch.yaml  draft-release.yaml  label-pull-request.yaml  python-tests.yaml  release-container.yaml
docs/: ide-vscode.md  pypi-configuration.md  release-workflow.md
src/: app.py  dependencies.py  log_config.yaml
src/models/: greetings.py  people.py
src/routers/: greetings.py  people.py
test/unit/: conftest.py  test_greetings.py  test_health.py  test_people.py
